--- a/config/ansible.cfg
+++ b/config/ansible.cfg
@@ -60,6 +60,9 @@ inventory       = ./inventory.yml
 #
 #inject_facts_as_vars = True
 
+# Paths to search for collections, colon separated
+# collections_paths = ~/.ansible/collections:/usr/share/ansible/collections
+
 # Paths to search for roles, colon separated
 #roles_path = ~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
 
@@ -74,14 +77,14 @@ inventory       = ./inventory.yml
 #stdout_callback = debug
 
 
-# Ansible ships with some plugins that require whitelisting,
+# Ansible ships with some plugins that require enabling
 # this is done to avoid running all of a type by default.
 # These setting lists those that you want enabled for your system.
 # Custom plugins should not need this unless plugin author disables them
 # by default.
 #
 # Enable callback plugins, they can output to stdout but cannot be 'stdout' type.
-callback_whitelist = ansible.posix.profile_tasks, ansible.posix.timer
+callbacks_enabled = ansible.posix.profile_tasks, ansible.posix.timer
 
 # Determine whether includes in tasks and handlers are "static" by
 # default. As of 2.0, includes are dynamic by default. Setting these
@@ -190,7 +193,7 @@ deprecation_warnings = True
 # parameter string. This will for example suggest using the git module
 # instead of shelling out to the git command.
 #
-command_warnings = True
+#command_warnings = False
 
 
 # set plugin path directories here, separate with colons
@@ -224,7 +227,7 @@ command_warnings = True
 
 # Set which cowsay stencil you'd like to use by default. When set to 'random',
 # a random stencil will be selected for each task. The selection will be filtered
-# against the `cow_whitelist` option below.
+# against the `cow_enabled` option below.
 #
 #cow_selection = default
 #cow_selection = random
@@ -234,7 +237,7 @@ command_warnings = True
 # NOTE: line continuations here are for formatting purposes only, as the INI parser
 #       in python does not support them.
 #
-#cow_whitelist=bud-frogs,bunny,cheese,daemon,default,dragon,elephant-in-snake,elephant,eyes,\
+#cowsay_enabled_stencils=bud-frogs,bunny,cheese,daemon,default,dragon,elephant-in-snake,elephant,eyes,\
 #              hellokitty,kitty,luke-koala,meow,milk,moofasa,moose,ren,sheep,small,stegosaurus,\
 #              stimpy,supermilker,three-eyes,turkey,turtle,tux,udder,vader-koala,vader,www
 
@@ -275,7 +278,7 @@ command_warnings = True
 # choice but to create world readable temporary files to execute a module on
 # the remote machine. This option is False by default for security. Users may
 # turn this on to have behaviour more like Ansible prior to 2.1.x. See
-# https://docs.ansible.com/ansible/latest/user_guide/become.html#becoming-an-unprivileged-user
+# https://docs.ansible.com/ansible/latest/user_guide/become.html#risks-of-becoming-an-unprivileged-user
 # for more secure ways to fix this than enabling this option.
 #
 #allow_world_readable_tmpfiles = False
@@ -317,6 +320,7 @@ command_warnings = True
 
 # set default errors for all plays
 #any_errors_fatal = False
+
 
 [inventory]
 # List of enabled inventory plugins and the order in which they are used.
@@ -388,7 +392,7 @@ command_warnings = True
 # In those cases, a "too long for Unix domain socket" ssh error would occur.
 #
 # Example:
-# control_path = %(directory)s/%%h-%%r
+# control_path = %(directory)s/%%C
 #control_path =
 
 # Enabling pipelining reduces the number of SSH operations required to
@@ -488,3 +492,34 @@ always = True
 
 # Set how many context lines to show in diff
 context = 5
+
+[galaxy]
+# Controls whether the display wheel is shown or not
+#display_progress=
+
+# Validate TLS certificates for Galaxy server
+#ignore_certs = False
+
+# Role or collection skeleton directory to use as a template for
+# the init action in ansible-galaxy command
+#role_skeleton=
+
+# Patterns of files to ignore inside a Galaxy role or collection
+# skeleton directory
+#role_skeleton_ignore="^.git$", "^.*/.git_keep$"
+
+# Galaxy Server URL
+#server=https://galaxy.ansible.com
+
+# A list of Galaxy servers to use when installing a collection.
+#server_list=automation_hub, release_galaxy
+
+# Server specific details which are mentioned in server_list
+#[galaxy_server.automation_hub]
+#url=https://cloud.redhat.com/api/automation-hub/
+#auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
+#token=my_ah_token
+#
+#[galaxy_server.release_galaxy]
+#url=https://galaxy.ansible.com/
+#token=my_token
