--- a/tasks/system/docker.yml
+++ b/tasks/system/docker.yml
@@ -1,23 +1,11 @@
 ---
-- name: All - Install minikube
-  get_url:
-    url: https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-    dest: /usr/local/bin/minikube
-
-- name: All - Enable execue for minikube
-  file:
-    path: /usr/local/bin/minikube
-    mode: +x
-
 - name: All - Install docker-compose {{ docker_compose_version }}
-  tags: [docker]
   get_url:
     url: "https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-{{ ansible_system }}-{{ ansible_machine }}"
     dest: /usr/local/bin/docker-compose-{{ docker_compose_version }}
     mode: '0755'
 
 - name: Non-Debian - Install docker-compose completions {{ docker_compose_version }}
-  tags: [docker]
   get_url:
     url: "https://raw.githubusercontent.com/docker/compose/{{ docker_compose_version }}/contrib/completion/zsh/_docker-compose"
     dest: /usr/share/zsh/site-functions/_docker-compose
@@ -25,7 +13,6 @@
   when: ansible_os_family != 'Debian'
 
 - name: Debian - Install docker-compose completions {{ docker_compose_version }}
-  tags: [docker]
   get_url:
     url: "https://raw.githubusercontent.com/docker/compose/{{ docker_compose_version }}/contrib/completion/zsh/_docker-compose"
     dest: /usr/local/share/zsh/site-functions/_docker-compose
@@ -33,7 +20,6 @@
   when: ansible_os_family == 'Debian'
 
 - name: All - Update link to latest docker-compose
-  tags: [docker]
   file:
     src: /usr/local/bin/docker-compose-{{ docker_compose_version }}
     dest: /usr/local/bin/docker-compose
@@ -42,23 +28,26 @@
     mode: '0755'
 
 - name: All - Enable execue for docker-compose
-  tags: [docker]
   file:
     src: /usr/local/bin/docker-compose-{{ docker_compose_version }}
     dest: /usr/local/bin/docker-compose
     mode: +rx
 
 - name: All - Add user to docker group
-  tags: [docker]
   user:
     name: "{{ ansible_user_id }}"
     append: true
     groups: docker
 
-- name: CentOS - Add user to docker group
-  tags: [docker]
-  user:
-    name: "{{ ansible_user_id }}"
-    append: true
-    groups: docker
-  ignore_errors: "{{ uri_docker_repo_rpm is failed }}"
+### --- Family Specific Ssetup
+- name: Archlinux Docker
+  import_tasks: archlinux/docker.yml
+  when: ansible_os_family == 'Archlinux'
+
+- name: Debian Docker
+  import_tasks: debian/docker.yml
+  when: ansible_os_family == 'Debian'
+
+- name: RedHat Docker
+  import_tasks: redhat/docker.yml
+  when: ansible_os_family == 'RedHat'
