--- a/tasks/system/debian/docker.yml
+++ b/tasks/system/debian/docker.yml
@@ -1,14 +1,16 @@
 ---
+# TODO this is missing the fingerprint
 - name: Debian - Add Docker signing key
   tags: [docker]
-  apt_key:
+  ansible.builtin.apt_key:
     url: https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg
     state: present
+    keyring: /usr/share/keyrings/docker-archive-keyring.gpg
 
 - name: Debian - Add Docker repo
   tags: [docker]
-  apt_repository:
-    repo: "deb [arch=amd64] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_lsb['codename'] }} stable"
+  ansible.builtin.apt_repository:
+    repo: "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_lsb['codename'] }} stable"
     filename: docker
     state: present
 
