all: enable the docker build cache

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -138,6 +138,8 @@ build:linter:
     - >
       /kaniko/executor
       --cleanup
+      --cache
+      --cache-repo $CI_REGISTRY_IMAGE/cache
       --context $CI_PROJECT_DIR
       --destination $CI_REGISTRY_IMAGE/linter:$CI_COMMIT_REF_SLUG
       --dockerfile $CI_PROJECT_DIR/.gitlab/linter.dockerfile
