all: fix ci stages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,8 @@ workflow:
       when: never
     - if: $CI_COMMIT_BRANCH
 
-.build:
-  stage: build
+.test:
+  stage: test
   needs:
     - lint:shellcheck
     - lint:ansible
@@ -164,7 +164,7 @@ lint:ansible:
 
 archlinux:
   extends:
-    - .build
+    - .test
     - .setup_archlinux
     - .rules_archlinux
   image: archlinux:latest
@@ -172,7 +172,7 @@ archlinux:
 debian_10:
   # EOL: ~2022
   extends:
-    - .build
+    - .test
     - .setup_debian
     - .rules_debian
   image: debian:10
@@ -180,7 +180,7 @@ debian_10:
 fedora_28:
   # EOL: 2019-05-28
   extends:
-    - .build
+    - .test
     - .setup_fedora
     - .rules_eol
   image: fedora:28
@@ -188,7 +188,7 @@ fedora_28:
 fedora_29:
   # EOL: 2019-11-30
   extends:
-    - .build
+    - .test
     - .setup_fedora
     - .rules_eol
   image: fedora:29
@@ -196,7 +196,7 @@ fedora_29:
 fedora_30:
   # EOL: 2020-05-26
   extends:
-    - .build
+    - .test
     - .setup_fedora
     - .rules_eol
   image: fedora:30
@@ -204,35 +204,35 @@ fedora_30:
 fedora_31:
   # EOL: 2020-11-24
   extends:
-    - .build
+    - .test
     - .setup_fedora
     - .rules_eol
   image: fedora:31
 
 fedora_32:
   extends:
-    - .build
+    - .test
     - .setup_fedora
     - .rules_eol
   image: fedora:32
 
 fedora_33:
   extends:
-    - .build
+    - .test
     - .setup_fedora
     - .rules_redhat
   image: fedora:33
 
 fedora_34:
   extends:
-    - .build
+    - .test
     - .setup_fedora
     - .rules_redhat
   image: fedora:34
 
 fedora_35:
   extends:
-    - .build
+    - .test
     - .setup_fedora
     - .rules_redhat
   image: fedora:35
@@ -240,7 +240,7 @@ fedora_35:
 
 fedora_rawhide:
   extends:
-    - .build
+    - .test
     - .setup_fedora
     - .rules_redhat
   image: fedora:rawhide
@@ -248,7 +248,7 @@ fedora_rawhide:
 
 manjaro:
   extends:
-    - .build
+    - .test
     - .setup_archlinux
     - .rules_archlinux
   image: manjarolinux/base:latest
@@ -256,7 +256,7 @@ manjaro:
 ubuntu_18_04:
   # EOL: 2023-04
   extends:
-    - .build
+    - .test
     - .setup_ubuntu
     - .rules_debian
   image: ubuntu:18.04
@@ -264,7 +264,7 @@ ubuntu_18_04:
 ubuntu_20_04:
   # EOL: 2025-04
   extends:
-    - .build
+    - .test
     - .setup_ubuntu
     - .rules_debian
   image: ubuntu:20.04
@@ -274,7 +274,7 @@ ubuntu_21_04:
   # replace this job with the rolling short term release
   # https://wiki.ubuntu.com/Releases
   extends:
-    - .build
+    - .test
     - .setup_ubuntu
     - .rules_debian
   image: ubuntu:21.04
