--- a/tasks/system/debian/repositories.yml
+++ b/tasks/system/debian/repositories.yml
@@ -31,14 +31,12 @@
     filename: hashicorp
     state: present
 
-# TODO: this is missing the key fingerprint
-- name: Debian - Add VSCode signing key  # noqa 303
-  ansible.builtin.shell:
-    cmd: |
-      curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > /tmp/packages.microsoft.gpg
-      install -o root -g root -m 644 /tmp/packages.microsoft.gpg /usr/share/keyrings/
-      rm /tmp/packages.microsoft.gpg
-    creates: /usr/share/keyrings/packages.microsoft.gpg
+- name: Debian - Add VSCode signing key
+  ansible.builtin.apt_key:
+    url: https://packages.microsoft.com/keys/microsoft.asc
+    state: present
+    id: BC528686B50D79E339D3721CEB3E94ADBE1229CF
+    keyring: /usr/share/keyrings/packages.microsoft.gpg
 
 - name: Debian - Add VSCode Repo
   ansible.builtin.apt_repository:
@@ -46,11 +44,11 @@
     filename: vscode
     state: present
 
-# TODO: this is missing the key fingerprint
 - name: Debian - Add Sublime-Text signing key
   ansible.builtin.apt_key:
     url: https://download.sublimetext.com/sublimehq-pub.gpg
     state: present
+    id: 1EDDE2CDFC025D17F6DA9EC0ADAE6AD28A8F901A
     keyring: /usr/share/keyrings/sublime-archive-keyring.gpg
 
 - name: Debian - Add Sublime Text Repo
@@ -68,3 +66,9 @@
 - name: Ubuntu Repositories
   import_tasks: ubuntu/repositories.yml
   when: ansible_distribution == 'Ubuntu'
+
+### --- Post repo setup steps ---
+
+- name: Debian - Update apt cache
+  apt:
+    update_cache: true
