--- a/tasks/system/redhat/docker.yml
+++ b/tasks/system/redhat/docker.yml
@@ -7,7 +7,7 @@
   ignore_errors: true
 
 - name: RedHat - Import Docker signing key
-  rpm_key:
+  ansible.builtin.rpm_key:
     state: present
     key: https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg
     fingerprint: 060A61C51B558A7F742B77AAC52FEB6B621E9F35
@@ -15,7 +15,7 @@
   delay: 5
 
 - name: RedHat - Add Docker repository
-  yum_repository:
+  ansible.builtin.yum_repository:
     file: docker-ce
     name: docker-ce-stable
     description: "Docker CE Stable - {{ ansible_distribution }} - $releasever - $basearch"
@@ -27,7 +27,7 @@
 
 # Useful to configure on new Fedora versions that do not have docker support yet
 - name: RedHat - Disable Docker Test repository
-  yum_repository:
+  ansible.builtin.yum_repository:
     file: docker-ce
     name: docker-ce-test
     description: "Docker CE Test - {{ ansible_distribution }} - $releasever - $basearch"
@@ -38,7 +38,7 @@
     repo_gpgcheck: true
 
 - name: Fedora >=35 - Add Docker Stable repository for Fedora34
-  yum_repository:
+  ansible.builtin.yum_repository:
     file: docker-ce
     name: docker-ce-stable
     description: "Docker CE Stable - {{ ansible_distribution }} - 34 - $basearch"
